syntax = "proto3";

option java_package = "cn.edu.ruc.iir.paraflow.metaserver.proto";
option java_outer_classname = "MetaProto";
option objc_class_prefix = "META";

package meta;

service Meta {
    rpc listDatabases(NoneType) returns (StringListType) {}
    rpc listTables(DbNameParam) returns (StringListType) {}
    rpc getDatabase(DbNameParam) returns (DbParam) {}
    rpc getTable(DbTblParam) returns (TblParam) {}
    rpc getColumn(DbTblColParam) returns (ColParam) {}
    rpc createDatabase(DbParam) returns (StatusType) {}
    rpc createTable(TblParam) returns (StatusType) {}
    rpc createColumn(ColListType) returns (StatusType) {}
    rpc deleteDatabase(DbNameParam) returns (StatusType) {}
    rpc deleteTable(DbTblParam) returns (StatusType) {}
    rpc renameDatabase(RenameDbParam) returns (StatusType) {}
    rpc renameTable(RenameTblParam) returns (StatusType) {}
    rpc renameColumn(RenameColParam) returns (StatusType) {}
    rpc createDbParam(DbParamParam) returns (StatusType) {}
    rpc createTblParam(TblParamParam) returns (StatusType) {}
    rpc createTblPriv(TblPrivParam) returns (StatusType) {}
    rpc createStorageFormat(StorageFormatParam) returns (StatusType) {}
    rpc createFiberFunc(FiberFuncParam) returns (StatusType) {}
    rpc createBlockIndex(BlockIndexParam) returns (StatusType) {}
    rpc createUser(UserParam) returns (StatusType) {}
    rpc filterBlockIndex(FilterBlockIndexParam) returns (StringListType) {}
    rpc filterBlockIndexByFiber(FilterBlockIndexByFiberParam) returns (StringListType) {}
    rpc stopServer(NoneType) returns (NoneType) {}
}

// Models

message VerModel {
    int32 verId = 1;
}

message UserModel {
    string userName = 1;
    string userPass = 2;
    string roleName = 3;
    int64 creationTime = 4;
    int64 lastVisitTime = 5;
}

message DbModel {
    int64 dbId = 1;
    string dbName = 2;
    string locationUrl = 3;
    int64 userId = 4;
}

message TblModel {
    int64 tblId = 1;
    int64 dbId = 2;
    int64 createTime = 3;
    int64 lastAccessTime = 4;
    int64 userId = 5;
    string tblName = 6;
    int32 tblType = 7;
    int64 fiberColId = 8;
    string locationUrl = 9;
    int32 storageFormatId = 10;
    int64 fiberFuncId = 11;
}

message ColModel {
    int64 colId = 1;
    int32 colIndex = 2;
    string colName = 3;
    int64 dbId = 4;
    int64 tblId = 5;
    string colType = 6;
    string dataType = 7;
}

message DbParamModel {
    int64 dbId = 1;
    string paramKey = 2;
    string paramValue = 3;
}

//message DbPrivsModel {
//    int64 dbPrivId = 1;
//    int64 grantTime = 2;
//    int64 userId = 3;
//    int32 privType = 4;
//    int64 dbId = 5;
//}

message TblParamModel {
    int64 tblId = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message TblPrivModel {
    int64 tblPrivId = 1;
    int64 grantTime = 2;
    int32 privType = 3;
    int64 tblId = 4;
}

message StorageFormatModel {
    int32 storageFormatId = 1;
    string compression = 2;
    string serialFormat = 3;
}

message FiberFuncNodel {
    int64 fiberFuncId = 1;
    string fiberFuncName = 2;
    bytes fiberFuncContent = 3;
}

message BlockIndex {
    int64 blockIndexId = 1;
    int64 tblId = 2;
    int64 fiberValue = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
    string timeZone = 6;
    string blockPath = 7;
}

// Customized types

message NoneType {

}

message StringListType {
    bool isEmpty = 1;
    repeated string str = 2;
}

message LongListType {
    repeated int64 lon = 1;
}

message ColListType {
    repeated ColParam column = 1;
}

message FiberValueType {
    int64 value = 1;
}

message StatusType {
    enum State {
        OK = 0;
        DATABASE_ALREADY_EXISTS = 1;
        DATABASE_NOT_FOUND = 2;
        TABLE_ALREADY_EXISTS = 3;
        TABLE_NOT_FOUND = 4;
        COLUMN_ALREADY_EXISTS = 5;
        COLUMN_NOT_FOUND = 6;
        FIBER_ALREADY_EXISTS = 7;
        BLOCK_INDEX_ERROR = 8;
        CREATE_COLUMN_ERROR = 9;
        META_TABLE_CREATE_FAIL = 10;
        META_TABLE_ALREADY_EXISTS = 11;
        META_TABLE_BROKEN = 12;
        USER_NOT_FOUND = 13;
        CREATE_TABLE_ERROR = 14;
        DELETE_COLUMN_ERROR = 15;
        DELETE_TABLE_ERROR = 16;
        DELETE_DATABASE_ERROR = 17;
        USER_ALREADY_EXISTS = 18;
        DATABASE_PARAM_ALREADY_EXISTS = 19;
        TABLE_PARAM_ALREADY_EXISTS = 20;
        TABLE_PRIV_ALREADY_EXISTS = 21;
        STORAGE_FORMAT_ALREADY_EXISTS = 22;
        FIBER_FUNCTION_ALREADY_EXISTS = 23;
        BLOCK_INDEX_ALREADY_EXISTS = 24;
        STORAGE_FORMAT_NOT_FOUND = 25;
        FIBER_FUNCTION_NOT_FOUND = 26;
    }
    State status = 1;
}

// Customized paremeters
message UserParam {
    string userName = 1;
    string password = 2;
    int64 createTime = 3;
    int64 lastVisitTime = 4;
}

message DbParam {
    bool isEmpty = 1;
    string dbName = 2;
    string locationUrl = 3;
    string userName = 4;
    StatusType status = 5;
}

message TblParam {
    bool isEmpty = 1;
    string dbName = 2;
    string tblName = 3;
    int32 tblType = 4;
    string userName = 5;
    int64 createTime = 6;
    int64 lastAccessTime = 7;
    string locationUrl = 8;
    string storageFormatName = 9;
    int32 fiberColId = 11;
    string fiberFuncName = 12;
    ColListType colList = 13;
}

message ColParam {
    bool isEmpty = 1;
    int32 colIndex = 2;
    string dbName = 3;
    string tblName = 4;
    string colName = 5;
    string colType = 6;
    string dataType = 7;
    StatusType status = 8;
}

message DbNameParam {
    string database = 1;
}

message TblNameParam {
    string table = 1;
}

message ColNameParam {
    string column = 1;
}

message DbTblParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
}

message DbTblColParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    ColNameParam column = 3;
}

message RenameDbParam {
    string oldName = 1;
    string newName = 2;
}

message RenameTblParam {
    DbNameParam database = 1;
    string oldName = 2;
    string newName = 3;
}

message RenameColParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    string oldName = 3;
    string newName = 4;
}

message BlockIndexParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    FiberValueType value = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
    string timeZone = 6;
    string blockPath = 7;
}

message FilterBlockIndexParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    int64 timeBegin = 3;
    int64 timeEnd = 4;
}

message FilterBlockIndexByFiberParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    FiberValueType value = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
}

message DbParamParam {
    string dbName = 1;
    string paramKey = 2;
    string paramValue = 3;
}

//message CreateDbPrivsParam {
//    string dbName = 1;
//    string userName = 2;
//    int32 privType = 3;
//    int64 grantTime = 4;
//}

message TblParamParam {
    string dbName = 1;
    string tblName = 2;
    string paramKey = 3;
    string paramValue = 4;
}

message TblPrivParam {
    string dbName = 1;
    string tblName = 2;
    string userName = 3;
    int32 privType = 4;
    int64 grantTime = 5;
}

message StorageFormatParam {
    string storageFormatName = 1;
    string compression = 2;
    string serialFormat = 3;
}

message FiberFuncParam {
    string fiberFuncName = 1;
    bytes fiberFuncContent = 2;
}
